--- a/src/packages/apps/MiuiBrowser/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/MiuiBrowser/res/values-zh-rCN/strings.xml
@@ -34,7 +34,7 @@
     <string name="move_to_up_folder">移动到上一级</string>
 
     <!--  -->
-    <string name="tab_yellowpage">"名站导航"</string>
+    <string name="tab_yellowpage">"上网导航"</string>
     <string name="tab_quicklinks">"快捷书签"</string>
     <string name="pref_content_night_read_mode">夜间模式</string>
 
