--- a/src/packages/apps/MiuiGallery/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/MiuiGallery/res/values-zh-rCN/strings.xml
@@ -45,7 +45,7 @@
     <string name="delete" msgid="2839695998251824487">"删除"</string>
 
     <!-- 确认要删除1项吗？ -->
-    <string name="confirm_delete" msgid="7358770022173660511">"确认要删除<xliff:g id="ITEM"> %s</xliff:g>吗？"</string>
+    <string name="confirm_delete" msgid="7358770022173660511">"确认要删除<xliff:g id="ITEM"> %s</xliff:g>项吗？"</string>
 
     <!-- 确定要删除2个图册(包含4张图片)吗？ -->
     <string name="confirm_delete_album">确定要删除<xliff:g id="ALBUM"> %s</xliff:g>个图册(包含<xliff:g id="ITEM"> %s</xliff:g>张图片)吗?</string>
