--- a/src/packages/apps/MiuiGallery/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiGallery/res/values-zh-rTW/strings.xml
@@ -43,7 +43,23 @@
     <string name="set_image" msgid="2331476809308010401">"應用為"</string>
     <string name="camera_setas_wallpaper" msgid="797463183863414289">"桌布"</string>
     <string name="delete" msgid="2839695998251824487">"刪除"</string>
+
     <string name="confirm_delete" msgid="7358770022173660511">"確認要刪除<xliff:g id="ITEM"> %s</xliff:g>項嗎？"</string>
+
+    <!-- 確定要刪除2個相簿(包含4張圖片)嗎？ -->
+    <string name="confirm_delete_album">確定要刪除<xliff:g id="ALBUM"> %s</xliff:g>個相簿(包含<xliff:g id="ITEM"> %s</xliff:g>張圖片)嗎?</string>
+
+    <!-- “相機”相簿為系統相簿,確定刪除嗎？ -->
+    <string name="confirm_delete_system_album"> <xliff:g id="SYSTEM_ALBUM"> %s</xliff:g>相簿為系統相簿, 確定刪除嗎?</string>
+
+    <!-- 確定要刪除3張圖片,2個目錄(包含4張圖片,3個影片)嗎？ -->
+    <string name="confirm_delete_folders_and_pictures">確定要刪除<xliff:g id="FOLDER_PICTURE"> %s</xliff:g>嗎?</string>
+    <string name="confirm_delete_pictures"><xliff:g id="PICTURE"> %s</xliff:g>張圖片</string>
+    <string name="confirm_delete_folders_including"><xliff:g id="FOLDER"> %s</xliff:g>個目錄(包含<xliff:g id="INCLUDING"> %s</xliff:g>)</string>
+    <string name="confirm_delete_videos"><xliff:g id="VIDEO"> %s</xliff:g>個影片</string>
+    <!-- 確定要刪除3張圖片,2個目錄(包含0個檔案)嗎？ -->
+    <string name="confirm_delete_including_null">0個檔案</string>
+
     <string name="cancel" msgid="3637516880917356226">"取消"</string>
     <string name="share" msgid="3619042788254195341">"分享"</string>
     <string name="select_all" msgid="3403283025220282175">"全選"</string>
