--- a/src/packages/apps/MiuiGallery/res/values/strings.xml
+++ b/src/packages/apps/MiuiGallery/res/values/strings.xml
@@ -92,21 +92,21 @@
     <!-- Details dialog "OK" button. Dismisses dialog. -->
     <string name="delete">Delete</string>
 
-    <!-- Are you sure to delete 3 items？ -->
-    <string name="confirm_delete">Are you sure to delete <xliff:g id="ITEM"> %s</xliff:g> items?</string>
+    <!-- Confirm to delete 3 items？ -->
+    <string name="confirm_delete">Confirm to delete <xliff:g id="ITEM"> %s</xliff:g> items?</string>
 
-    <!-- Are you sure to delete 2 albums (including 6 items)？ -->
-    <string name="confirm_delete_album">Are you sure to delete <xliff:g id="ALBUM"> %s</xliff:g> albums (including <xliff:g id="ITEM">%s</xliff:g> items)?</string>
+    <!-- Confirm to delete 2 albums (including 6 items)？ -->
+    <string name="confirm_delete_album">Confirm to delete <xliff:g id="ALBUM"> %s</xliff:g> albums (including <xliff:g id="ITEM">%s</xliff:g> items)?</string>
 
-    <!-- "Camera" album is system album, are you sure to delete？ -->
-    <string name="confirm_delete_system_album"> <xliff:g id="SYSTEM_ALBUM"> %s</xliff:g> album is system album, are you sure to delete?</string>
+    <!-- "Camera" album is system album, confirm to delete？ -->
+    <string name="confirm_delete_system_album"> <xliff:g id="SYSTEM_ALBUM"> %s</xliff:g> album is system album, confirm to delete?</string>
 
-    <!-- Are you sure to delete 2 pictures, 3 folders (including 7 pictures, 1 videos)？ -->
-    <string name="confirm_delete_folders_and_pictures">Are you sure to delete <xliff:g id="FOLDER_PICTURE"> %s</xliff:g>?</string>
+    <!-- Confirm to delete 2 pictures, 3 folders (including 7 pictures, 1 videos)？ -->
+    <string name="confirm_delete_folders_and_pictures">Confirm to delete <xliff:g id="FOLDER_PICTURE"> %s</xliff:g>?</string>
     <string name="confirm_delete_pictures"><xliff:g id="PICTURE"> %s</xliff:g> pictures</string>
     <string name="confirm_delete_folders_including"><xliff:g id="FOLDER"> %s</xliff:g> folders (including <xliff:g id="INCLUDING">%s</xliff:g>)</string>
     <string name="confirm_delete_videos"><xliff:g id="VIDEO"> %s</xliff:g> videos</string>
-    <!-- Are you sure to delete 1 folders (including 0 item)？ -->
+    <!-- Confirm to delete 1 folders (including 0 item)？ -->
     <string name="confirm_delete_including_null">0 item</string>
 
     <string name="cancel">Cancel</string>
