--- a/src/packages/apps/MiuiSettings/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiSettings/res/values-zh-rTW/strings.xml
@@ -24,7 +24,7 @@
 
     <string name="xiaomi_account">"小米帳號"</string>
 
-    <string name="sms_received_sound_title">簡迅鈴聲</string>
+    <string name="sms_received_sound_title">簡訊鈴聲</string>
     <string name="sms_delivered_sound_title">簡訊送達鈴聲</string>
     <string name="sms_received_sound_dialog_title">選擇簡訊鈴聲</string>
     <string name="sms_delivered_sound_dialog_title">選擇簡訊送達鈴聲</string>
