--- a/src/packages/apps/MiuiVideo/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiVideo/res/values-zh-rTW/strings.xml
@@ -18,6 +18,7 @@
     <string name="play_length_colon">片長：</string>
     <string name="series_colon">劇集：</string>
     <string name="minute">分鐘</string>
+    <string name="seconds">秒</string>
     <string name="review_success">評論成功</string>
 
     <string name="subchannel_all">全部</string>
