--- a/src/frameworks/miui/core/res/res/values-zh-rCN/strings.xml
+++ b/src/frameworks/miui/core/res/res/values-zh-rCN/strings.xml
@@ -83,7 +83,7 @@
     <string name="resource_get_auth">您尚未获得该主题的使用授权，请获得授权后使用</string>
     <string name="resource_get_auth_checking">正在检验授权</string>
     <string name="resource_get_auth_retrieving">正在获取授权</string>
-    <string name="resource_get_auth_failed">获取授权失败</string>
+    <string name="resource_get_auth_failed">服务暂时不可用，请稍后重试</string>
     <string name="resource_get_auth_missing">该主题不是从官方市场下载，请在官方市场下载同类主题</string>
 
     <string name="processing">处理中...</string>
