--- a/src/packages/apps/MiuiBrowser/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiBrowser/res/values-zh-rTW/strings.xml
@@ -34,7 +34,7 @@
     <string name="move_to_up_folder">移動到上一層</string>
 
     <!--  -->
-    <string name="tab_yellowpage">"名站導航"</string>
+    <string name="tab_yellowpage">"上網導航"</string>
     <string name="tab_quicklinks">"快速鏈接"</string>
     <string name="pref_content_night_read_mode">夜間模式</string>
 
