update miui of [ics]
Change-Id: I69a123637390e1f7feea9abe528eac2f00f1dd37

--- a/src/frameworks/miui/core/res/res/values-zh-rTW/strings.xml
+++ b/src/frameworks/miui/core/res/res/values-zh-rTW/strings.xml
@@ -45,7 +45,7 @@
     <string name="resource_update">更新</string>
     <string name="resource_select">選擇</string>
     <string name="resource_buy">購買</string>
-    <string name="resources_importing">導入資源中</string>
+    <string name="resource_importing">導入資源中</string>
     <string name="online_hottest">最熱排行</string>
     <string name="online_latest">最新排行</string>
     <string name="online_hottest_short">最熱</string>
@@ -83,8 +83,12 @@
     <string name="resource_get_auth">您尚未獲得該主題的使用授權，請獲得授權後使用</string>
     <string name="resource_get_auth_checking">正在檢驗授權</string>
     <string name="resource_get_auth_retrieving">正在獲取授權</string>
-    <string name="resource_server_out_of_service">服務暫時不可用，請稍後重試</string>
     <string name="resource_get_auth_missing">該主題不是從官方市場下載，請在官方市場下載同類主題</string>
+    <string name="resource_get_auth_exceed_max_limit_title">授權手機數超出限制</string>
+    <string name="resource_get_auth_exceed_max_limit_tips">您的小米賬號每年可在10台移動設備上使用主題，當前賬號已超出限制。您可以使用其他小米賬號重新嘗試。</string>
+    <string name="resource_server_out_of_service">服務暫時不可用，請稍後重試</string>
+
+    <string name="resource_switch_account">切換帳號</string>
 
     <string name="processing">處理中...</string>
 
