--- a/src/frameworks/miui/core/res/res/values/strings.xml
+++ b/src/frameworks/miui/core/res/res/values/strings.xml
@@ -45,7 +45,7 @@
     <string name="resource_update">Update</string>
     <string name="resource_select">Select</string>
     <string name="resource_buy">Buy</string>
-    <string name="resources_importing">Importing resources</string>
+    <string name="resource_importing">Importing resources</string>
     <string name="online_hottest">Hottest</string>
     <string name="online_latest">Latest</string>
     <string name="online_hottest_short">Hottest</string>
@@ -82,8 +82,12 @@
     <string name="resource_get_auth">You do not have authorization of the resource.</string>
     <string name="resource_get_auth_checking">Checking authorization...</string>
     <string name="resource_get_auth_retrieving">Retrieving authorization...</string>
-    <string name="resource_server_out_of_service">Out of service, please try again later.</string>
     <string name="resource_get_auth_missing">The theme is not downloaded from official market, please download similar ones from official market.</string>
+    <string name="resource_get_auth_exceed_max_limit_title">Authorized exceeds the limit</string>
+    <string name="resource_get_auth_exceed_max_limit_tips">Theme can not run on the current equipment with your account which is up to 10 mobile devices every year. Please try other Xiaomi accounts.</string>
+    <string name="resource_server_out_of_service">Out of service, please try again later.</string>
+
+    <string name="resource_switch_account">Switch</string>
 
     <string name="processing">Processing ...</string>
 
