--- a/src/packages/apps/AntiSpam/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/AntiSpam/res/values-zh-rCN/strings.xml
@@ -67,7 +67,7 @@
 
     <string name="fw_menu_new_blacklist_title">添加号码到黑名单</string>
     <string name="fw_menu_new_whitelist_title">添加号码到白名单</string>
-    <string name="fw_menu_new_manual">手工添加</string>
+    <string name="fw_menu_new_manual">手动添加</string>
     <string name="fw_add_list_title">输入电话号码</string>
     <string name="fw_menu_pick_from_contact">从通话和联系人中选择&#8230;</string>
     <string name="fw_menu_remove">删除</string>
