--- a/src/packages/apps/DeskClock/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/DeskClock/res/values-zh-rTW/strings.xml
@@ -156,7 +156,7 @@
     <string name="timer_start_alarm">計時器時間到</string>
     <string name="dialog_confirm_abort">要放棄更改嗎？</string>
     <string name="remind_ringtone">提醒鈴聲</string>
-    <string name="keep_screen_on">計時中瑩幕常亮</string>
+    <string name="keep_screen_on">計時中螢幕常亮</string>
     <string name="start_up">啟動</string>
     <string name="cancel">取消</string>
     <string name="timer_minute">分鐘</string>
