--- a/src/packages/apps/MiuiPhone/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/MiuiPhone/res/values-zh-rCN/strings.xml
@@ -125,6 +125,7 @@
     <string name="command_error_unsupported_mode_miui">不支持该种默认网络模式。</string>
     <string name="command_error_unsupported_request_miui">不支持此操作。</string>
     <string name="confirm_delete_message_title_miui">你将删除这个自定义归属地信息。</string>
+    <string name="confirm_no_countrycode_for_custom_location_miui">请输入无国家码的号码。</string>
     <string name="confirm_pin2_hint_miui">"确认新PIN2"</string>
     <string name="confirm_pin_hint_miui">"确认新PIN"</string>
     <string name="connect_disconnect_vibrate_none_miui">不振动</string>
