--- a/src/packages/apps/MiuiPhone/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiPhone/res/values-zh-rTW/strings.xml
@@ -125,6 +125,7 @@
     <string name="command_error_unsupported_mode_miui">不支持該種默認網路模式。</string>
     <string name="command_error_unsupported_request_miui">不支持此操作。</string>
     <string name="confirm_delete_message_title_miui">你將刪除這個自訂歸屬地訊息。</string>
+    <string name="confirm_no_countrycode_for_custom_location_miui">請輸入無國碼的號碼。</string>
     <string name="confirm_pin2_hint_miui">"確認新PIN2"</string>
     <string name="confirm_pin_hint_miui">"確認新PIN"</string>
     <string name="connect_disconnect_vibrate_none_miui">不震動</string>
