--- a/src/packages/apps/MiuiPhone/res/values/strings.xml
+++ b/src/packages/apps/MiuiPhone/res/values/strings.xml
@@ -125,6 +125,7 @@
     <string name="command_error_unsupported_mode_miui">The preferred network type is not supported.</string>
     <string name="command_error_unsupported_request_miui">This operation is not supported.</string>
     <string name="confirm_delete_message_title_miui">You will delete this custom attribution messages.</string>
+    <string name="confirm_no_countrycode_for_custom_location_miui">Please input a number without country code.</string>
     <string name="confirm_pin2_hint_miui">Confirm new PIN2</string>
     <string name="confirm_pin_hint_miui">Confirm new PIN</string>
     <string name="connect_disconnect_vibrate_none_miui">None</string>
