--- a/src/packages/apps/ThemeManager/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/ThemeManager/res/values-zh-rCN/strings.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">主题风格</string>
-    <string name="theme_activity_lable">主题风格</string>
+    <string name="theme_activity_label">主题风格</string>
+    <string name="theme_import_activity_label">转换主题</string>
 
     <string name="theme_changing_dialog_title">正在配置</string>
     <string name="theme_changed_message">配置%1$s成功</string>
@@ -48,7 +49,8 @@
 
     <string name="play_all_audio_effect">点击播放所有音效 (共%1$s个)</string>
 
-    <string name="theme_import">从SD卡导入主题包</string>
+    <string name="theme_import_from_sdcard">从SD卡导入主题包</string>
+    <string name="theme_pick_import_fail">导入失败</string>
     <string name="theme_select_others">通过其他程序选择</string>
     <string name="third_party_pickers_activity_title">设置%1$s</string>
     <string name="lockstyle_personal_settings">个性化定制当前锁屏</string>
@@ -98,6 +100,27 @@
 
     <string name="theme_importing">主题导入中</string>
     <string name="theme_import_success">主题导入完成</string>
+    <string name="theme_update_request_title">提示</string>
+    <string name="theme_update_request_content">新版主题客户端需要对主题包进行升级，升级时间可能较长，转换过程不会消耗流量。现在升级请点击确定。</string>
+    <string name="theme_import_preparing">正在扫描本地主题包</string>
+    <string name="theme_import_importing">主题格式转换中...还有%1$d个待转换</string>
+    <string name="theme_import_normal">有%1$d个主题未转换</string>
+    <string name="theme_sdcard_importing">正在导入</string>
+    <string name="theme_import_stoping">正在停止...</string>
+    <string name="theme_import_oper_stop">全部停止</string>
+    <string name="theme_import_oper_stop_request_content">这些主题必须进行格式转换后才能使用，确认停止全部转换吗?</string>
+    <string name="theme_import_oper_start">全部转换</string>
+
+    <string name="theme_import_item_not_upgraded">未转换</string>
+    <string name="theme_import_item_waiting">等待中</string>
+    <string name="theme_import_item_importing">转换中</string>
+    <string name="theme_import_item_delete_request_title">主题未转换</string>
+    <string name="theme_import_item_delete_request_content">该主题格式尚未转换，不能使用，您可以“全部转换”后使用，或删除该主题</string>
+    <string name="theme_import_item_delete_request_button">删除主题</string>
+    <string name="theme_import_item_reject_use">主题格式转换中，请稍候</string>
+    <string name="theme_another_import_running">有其他的导入任务，请稍后重试</string>
+    <string name="theme_is_imported">此主题已导入</string>
+    <string name="theme_import_new_download">正在导入刚下载的主题</string>
 
     <!-- comments -->
     <string name="resource_comment_no_comment">无评论信息</string>
