--- a/src/packages/apps/ThemeManager/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/ThemeManager/res/values-zh-rTW/strings.xml
@@ -3,7 +3,8 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">主題風格</string>
-    <string name="theme_activity_lable">主題風格</string>
+    <string name="theme_activity_label">主題風格</string>
+    <string name="theme_import_activity_label">轉換主題</string>
 
     <string name="theme_changing_dialog_title">正在配置</string>
     <string name="theme_changed_message">配置%1$s成功</string>
@@ -48,7 +49,8 @@
 
     <string name="play_all_audio_effect">點擊播放所有音效 (共%1$s個)</string>
 
-    <string name="theme_import">從SD卡導入主題包</string>
+    <string name="theme_import_from_sdcard">從SD卡導入主題包</string>
+    <string name="theme_pick_import_fail">導入失敗</string>
     <string name="theme_select_others">通過其他程式選擇</string>
     <string name="third_party_pickers_activity_title">設定%1$s</string>
     <string name="lockstyle_personal_settings">個性化定制當前解鎖</string>
@@ -97,6 +99,27 @@
 
     <string name="theme_importing">主題導入中</string>
     <string name="theme_import_success">主題導入完成</string>
+    <string name="theme_update_request_title">提示</string>
+    <string name="theme_update_request_content">新版主題客戶端需要對主題包進行升級，升級時間可能較長，轉換過程不會消耗流量。現在升級請點擊確定。</string>
+    <string name="theme_import_preparing">正在掃描本地主題包</string>
+    <string name="theme_import_importing">主題格式轉換中，還有%1$d個待轉換</string>
+    <string name="theme_import_normal">有%1$d個主題未轉換</string>
+    <string name="theme_sdcard_importing">正在導入</string>
+    <string name="theme_import_stoping">正在停止...</string>
+    <string name="theme_import_oper_stop">全部停止</string>
+    <string name="theme_import_oper_stop_request_content">這些主題必須進行格式轉換後才能使用，確認停止全部轉換嗎？</string>
+    <string name="theme_import_oper_start">全部轉換</string>
+
+    <string name="theme_import_item_not_upgraded">未轉換</string>
+    <string name="theme_import_item_waiting">等待中</string>
+    <string name="theme_import_item_importing">轉換中</string>
+    <string name="theme_import_item_delete_request_title">主題未轉換</string>
+    <string name="theme_import_item_delete_request_content">該主題格式尚未轉換，不能使用，您可以“全部轉換”後使用，或刪除該主題</string>
+    <string name="theme_import_item_delete_request_button">刪除主題</string>
+    <string name="theme_import_item_reject_use">主題格式轉換中，請稍候</string>
+    <string name="theme_another_import_running">有其他的導入任務，請稍後重試</string>
+    <string name="theme_is_imported">此主題已導入</string>
+    <string name="theme_import_new_download">正在導入剛下載的主題</string>
 
      <!-- comments -->
     <string name="resource_comment_no_comment">無評論資訊</string>
