--- a/src/packages/apps/ThemeManager/res/values/strings.xml
+++ b/src/packages/apps/ThemeManager/res/values/strings.xml
@@ -3,9 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="app_name">Themes</string>
-    <string name="theme_activity_lable">Themes</string>
+    <string name="theme_activity_label">Themes</string>
+    <string name="theme_import_activity_label">Theme upgrade</string>
 
-    <string name="theme_changing_dialog_title">Applying new theme. Please wait...</string>
+    <string name="theme_changing_dialog_title">Applying theme. Please wait...</string>
     <string name="theme_changed_message">Successfully applied %1$s.</string>
     <string name="theme_changed_failed_message">Failed to apply %1$s theme.</string>
 
@@ -48,7 +49,8 @@
 
     <string name="play_all_audio_effect">Play audio effect (total: %1$s)</string>
 
-    <string name="theme_import">Import from SD card</string>
+    <string name="theme_import_from_sdcard">Import from SD card</string>
+    <string name="theme_pick_import_fail">Import fail</string>
     <string name="theme_select_others">Others</string>
     <string name="third_party_pickers_activity_title">Set %1$s</string>
     <string name="lockstyle_personal_settings">Customization</string>
@@ -97,6 +99,28 @@
 
     <string name="theme_importing">Importing themes</string>
     <string name="theme_import_success">Import complete</string>
+
+    <string name="theme_update_request_title">Theme upgrade</string>
+    <string name="theme_update_request_content">The new format of theme package is needed, the upgrade process may take longe time and will not consume your traffic. Please click OK to upgrade now.</string>
+    <string name="theme_import_preparing">Scanning local themes</string>
+    <string name="theme_import_importing">Upgrading.. %1$d rest</string>
+    <string name="theme_import_normal">Theme upgrade</string>
+    <string name="theme_sdcard_importing">Importing</string>
+    <string name="theme_import_stoping">Stoping...</string>
+    <string name="theme_import_oper_stop">Stop</string>
+    <string name="theme_import_oper_stop_request_content">These themes must upgrade to use, confirm stop all upgrade process?</string>
+    <string name="theme_import_oper_start">Upgrade all</string>
+
+    <string name="theme_import_item_not_upgraded">Not upgraded</string>
+    <string name="theme_import_item_waiting">Waiting</string>
+    <string name="theme_import_item_importing">Upgrading</string>
+    <string name="theme_import_item_delete_request_title">Theme is not upgraded</string>
+    <string name="theme_import_item_delete_request_content">The theme package is not upgraded, you can use it after the "Upgrade all" process or delete it.</string>
+    <string name="theme_import_item_delete_request_button">Delete</string>
+    <string name="theme_import_item_reject_use">The theme is in upgrade progress, please wait.</string>
+    <string name="theme_another_import_running">There is another import process running, please try later.</string>
+    <string name="theme_is_imported">This theme is imported</string>
+    <string name="theme_import_new_download">Importing</string>
 
     <!-- comments -->
     <string name="resource_comment_no_comment">No comment</string>
