--- a/src/packages/apps/XiaomiServiceFramework/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values-zh-rTW/strings.xml
@@ -144,8 +144,8 @@
     <string name="user_agreement_p4">隱私條款</string>
     <string name="user_agreement_p5">註冊帳戶即表示您同意遵守\n小米帳戶的</string>
     <string name="skip_setup_account_title">跳過帳戶設置</string>
-    <string name="skip_setup_account_msg">使用小米帳戶可以同步備份短信、聯繫人、照片等各種手機數據。確認要跳過帳戶設置嗎？</string>
-    <string name="account_dspt">小米帳戶可以同步備份您的短信、聯繫人、\n照片等各種手機數據</string>
+    <string name="skip_setup_account_msg">使用小米帳戶可以同步備份簡訊、聯絡人、照片等各種手機數據。確認要跳過帳戶設置嗎？</string>
+    <string name="account_dspt">小米帳戶可以同步備份您的簡訊、\n聯絡人、照片等各種手機數據</string>
 
     <string name="title_payment">小米移動支付</string>
     <string name="label_order_name">商品名稱：</string>
@@ -155,6 +155,7 @@
     <string name="password_error">請輸入您的登錄密碼</string>
     <string name="progress_creating">正在獲取訂單信息…</string>
     <string name="progress_loading">正在處理，請稍候…</string>
+    <string name="progress_connecting">鏈接中…</string>
     <string name="button_cancel">取消</string>
     <string name="button_retry">重試</string>
     <string name="button_pay">確認支付</string>
@@ -196,7 +197,7 @@
     <string name="btn_recharge_large">立即充值</string>
     <string name="recharge_other">選擇其他支付方式</string>
 
-    <string name="alipay_picker_hint">請選擇充值金額：</string>
+    <string name="alipay_picker_hint">請選擇充值金額</string>
     <string name="alipay_edit_hint">充值金額（人民幣）：</string>
     <string name="alipay_edit_limit">單筆不超過500</string>
     <string name="progress_alipay_creating">正在創建支付寶訂單…</string>
@@ -225,10 +226,11 @@
     <string name="prepaid_error_card_number">請輸入正確的充值卡號</string>
     <string name="prepaid_error_password">請輸入正確的充值卡密碼</string>
 
-    <string name="progress_submit_title">充值請求已提交</string>
+    <string name="progress_submit_title">驗證中，請求已提交</string>
     <string name="progress_submit_summary">正在充值：<xliff:g id="value">%1$s</xliff:g>元</string>
-    <string name="progress_submit_hint_init">預計3分鍾內到帳，<xliff:g id="count">%1$s</xliff:g>秒後自動查詢</string>
-    <string name="progress_submit_hint_query">預計3分鍾內到帳，<xliff:g id="count">%1$s</xliff:g>秒後可以查詢</string>
+    <string name="progress_submit_hint">預計3分鍾內到帳</string>
+    <string name="btn_count_down_auto"><xliff:g id="count">%1$s</xliff:g>秒自動查詢</string>
+    <string name="btn_count_down_wait"><xliff:g id="count">%1$s</xliff:g>秒等候</string>
     <string name="btn_query">立即查詢</string>
     <string name="progress_querying">正在查詢支付結果…</string>
     <string name="progress_success_title"><xliff:g id="value">%1$s</xliff:g>米幣充值成功</string>
@@ -239,9 +241,10 @@
     <string name="progress_error_network">網路鏈接失敗，請檢查網路狀況。</string>
     <string name="progress_error_invalid_number">您的卡號和密碼填寫有誤，請返回重新嘗試。</string>
     <string name="progress_error_waiting">還沒有到帳，過會兒再試:)</string>
-    <string name="progress_error_contact_server">還沒有到帳，請放心款不會丟失，請聯系合作公司神舟付客服電話：400-001-0195，提供本次充值流水號：<xliff:g id="number">%1$s</xliff:g></string>
+    <string name="progress_warning_contact_server">還沒有到帳，請放心款不會丟失：\n1. 聯系神舟付客服：<xliff:g id="number">%1$s</xliff:g> \n2. 提供本次充值流水號：<xliff:g id="order">%2$s</xliff:g></string>
     <string name="btn_back">返回</string>
-    <string name="btn_recharge_other">其他充值方式</string>
+    <string name="btn_recharge_other">繼續充值</string>
+    <string name="btn_call">撥打客服</string>
 
     <string name="recharge_notification">正在充值<xliff:g id="value">%1$s</xliff:g>米幣</string>
 
