--- a/src/packages/apps/XiaomiServiceFramework/res/values/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values/strings.xml
@@ -155,6 +155,7 @@
     <string name="password_error">Please enter your account password</string>
     <string name="progress_creating">Retrieving order information...</string>
     <string name="progress_loading">Processing, please wait...</string>
+    <string name="progress_connecting">Connecting...</string>
     <string name="button_cancel">Cancel</string>
     <string name="button_retry">Retry</string>
     <string name="button_pay">Confirm</string>
@@ -196,7 +197,7 @@
     <string name="btn_recharge_large">Recharge now</string>
     <string name="recharge_other">Select other payment methods</string>
 
-    <string name="alipay_picker_hint">Please select the recharge Mi Credit amount:</string>
+    <string name="alipay_picker_hint">Please select the recharge Mi Credit amount</string>
     <string name="alipay_edit_hint">Recharge amount (RMB):</string>
     <string name="alipay_edit_limit">Less than 500</string>
     <string name="progress_alipay_creating">Generating Alipay order...</string>
@@ -225,10 +226,11 @@
     <string name="prepaid_error_card_number">Please input the correct recharge amount</string>
     <string name="prepaid_error_password">Please input the correct prepaid card password</string>
 
-    <string name="progress_submit_title">Recharge request submitted</string>
+    <string name="progress_submit_title">Request submitted, verifying</string>
     <string name="progress_submit_summary">Recharging: <xliff:g id="value">%1$s</xliff:g>RMB</string>
-    <string name="progress_submit_hint_init">Recharge will be reflected within 3 minutes，it will auto inquire after <xliff:g id="count">%1$s</xliff:g> seconds</string>
-    <string name="progress_submit_hint_query">Recharge will be reflected within 3 minutes, you can inquire after <xliff:g id="count">%1$s</xliff:g> seconds</string>
+    <string name="progress_submit_hint">Recharge will be reflected within 3 minutes</string>
+    <string name="btn_count_down_auto">Inquire after <xliff:g id="count">%1$s</xliff:g> seconds</string>
+    <string name="btn_count_down_wait">Wait for <xliff:g id="count">%1$s</xliff:g> seconds</string>
     <string name="btn_query">Inquiry now</string>
     <string name="progress_querying">Processing payment inquiry…</string>
     <string name="progress_success_title"><xliff:g id="value">%1$s</xliff:g>Mi Credit recharge complete</string>
@@ -239,9 +241,10 @@
     <string name="progress_error_network">Fail to connect to network. Please check network status.</string>
     <string name="progress_error_invalid_number">Card number and password invalid. Please try again.</string>
     <string name="progress_error_waiting">Still not reflected. Please try again later.</string>
-    <string name="progress_error_contact_server">Still not reflected. Please contact our partner company\'s customer service in Shenzhou：400-001-0195，Please provide the serial number: <xliff:g id="number">%1$s</xliff:g></string>
+    <string name="progress_warning_contact_server">Still not reflected. \n1. Please contact customer service in Shenzhou：<xliff:g id="number">%1$s</xliff:g> \n2. Please provide the serial number: <xliff:g id="order">%2$s</xliff:g></string>
     <string name="btn_back">Return</string>
-    <string name="btn_recharge_other">Other recharge methods</string>
+    <string name="btn_recharge_other">Recharge</string>
+    <string name="btn_call">Call</string>
 
     <string name="recharge_notification">Recharging<xliff:g id="value">%1$s</xliff:g>Mi dollar</string>
 
