--- a/src/packages/apps/XiaomiServiceFramework/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values-zh-rCN/strings.xml
@@ -155,6 +155,7 @@
     <string name="password_error">请输入您的登录密码</string>
     <string name="progress_creating">正在获取订单信息…</string>
     <string name="progress_loading">正在处理，请稍候…</string>
+    <string name="progress_connecting">链接中…</string>
     <string name="button_cancel">取消</string>
     <string name="button_retry">重试</string>
     <string name="button_pay">确认支付</string>
@@ -196,7 +197,7 @@
     <string name="btn_recharge_large">立即充值</string>
     <string name="recharge_other">选择其他支付方式</string>
 
-    <string name="alipay_picker_hint">请选择充值金额：</string>
+    <string name="alipay_picker_hint">请选择充值金额</string>
     <string name="alipay_edit_hint">充值金额（元）：</string>
     <string name="alipay_edit_limit">单笔不超过500</string>
     <string name="progress_alipay_creating">正在创建支付宝订单…</string>
@@ -225,10 +226,11 @@
     <string name="prepaid_error_card_number">请输入正确的充值卡号</string>
     <string name="prepaid_error_password">请输入正确的充值卡密码</string>
 
-    <string name="progress_submit_title">充值请求已提交</string>
+    <string name="progress_submit_title">验证中，请求已提交</string>
     <string name="progress_submit_summary">正在充值：<xliff:g id="value">%1$s</xliff:g>元</string>
-    <string name="progress_submit_hint_init">预计3分钟内到帐，<xliff:g id="count">%1$s</xliff:g>秒后自动查询</string>
-    <string name="progress_submit_hint_query">预计3分钟内到帐，<xliff:g id="count">%1$s</xliff:g>秒后可以查询</string>
+    <string name="progress_submit_hint">预计3分钟内到帐</string>
+    <string name="btn_count_down_auto"><xliff:g id="count">%1$s</xliff:g>秒自动查询</string>
+    <string name="btn_count_down_wait"><xliff:g id="count">%1$s</xliff:g>秒等候</string>
     <string name="btn_query">立即查询</string>
     <string name="progress_querying">正在查询支付结果…</string>
     <string name="progress_success_title"><xliff:g id="value">%1$s</xliff:g>米币充值成功</string>
@@ -239,9 +241,10 @@
     <string name="progress_error_network">网络链接失败，请检查网络状况。</string>
     <string name="progress_error_invalid_number">您的卡号和密码填写有误，请返回重新尝试。</string>
     <string name="progress_error_waiting">还没有到帐，过会儿再试:)</string>
-    <string name="progress_error_contact_server">还没有到帐，请放心款不会丢失，请联系合作公司神舟付客服电话：400-001-0195，提供本次充值流水号：<xliff:g id="number">%1$s</xliff:g></string>
+    <string name="progress_warning_contact_server">还没有到帐，请放心款不会丢失：\n1. 联系神舟付客服：<xliff:g id="number">%1$s</xliff:g>\n2. 提供本次充值流水号：<xliff:g id="order">%2$s</xliff:g></string>
     <string name="btn_back">返回</string>
-    <string name="btn_recharge_other">其他充值方式</string>
+    <string name="btn_recharge_other">继续充值</string>
+    <string name="btn_call">拨打客服</string>
 
     <string name="recharge_notification">正在充值<xliff:g id="value">%1$s</xliff:g>米币</string>
 
