update miui of [jellybean]
Change-Id: I06ba54449f5089342a1cb3dbc36d6e7f0514b013

--- a/src/frameworks/miui/core/res/res/values-zh-rCN/strings.xml
+++ b/src/frameworks/miui/core/res/res/values-zh-rCN/strings.xml
@@ -45,7 +45,7 @@
     <string name="resource_update">更新</string>
     <string name="resource_select">选择</string>
     <string name="resource_buy">购买</string>
-    <string name="resources_importing">导入资源中</string>
+    <string name="resource_importing">导入中</string>
     <string name="online_hottest">最热排行</string>
     <string name="online_latest">最新排行</string>
     <string name="online_hottest_short">最热</string>
@@ -83,8 +83,12 @@
     <string name="resource_get_auth">您尚未获得该主题的使用授权，请获得授权后使用</string>
     <string name="resource_get_auth_checking">正在检验授权</string>
     <string name="resource_get_auth_retrieving">正在获取授权</string>
-    <string name="resource_server_out_of_service">服务暂时不可用，请稍后重试</string>
     <string name="resource_get_auth_missing">该主题不是从官方市场下载，请在官方市场下载同类主题</string>
+    <string name="resource_get_auth_exceed_max_limit_title">授权手机数超出限制</string>
+    <string name="resource_get_auth_exceed_max_limit_tips">您的小米账号每年可在10台移动设备上使用主题，当前账号已超出限制。您可以使用其他小米账号重新尝试。</string>
+    <string name="resource_server_out_of_service">服务暂时不可用，请稍后重试</string>
+
+    <string name="resource_switch_account">切换帐号</string>
 
     <string name="processing">处理中...</string>
 
