--- a/src/packages/apps/MiuiBrowser/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiBrowser/res/values-zh-rTW/strings.xml
@@ -29,13 +29,13 @@
     <string name="bookmark_to_readmodelist_not_saved">"無法儲存至閱讀清單書籤。"</string>
     <string name="readmode_reach_last_page">"已到達最後一頁"</string>
 
-    <string name="share_link">分享鏈接</string>
+    <string name="share_link">分享連結</string>
     <string name="open_all_bookmarks">打開全部書籤</string>
     <string name="move_to_up_folder">移動到上一層</string>
 
     <!--  -->
     <string name="tab_yellowpage">"上網導航"</string>
-    <string name="tab_quicklinks">"快速鏈接"</string>
+    <string name="tab_quicklinks">"快速連結"</string>
     <string name="pref_content_night_read_mode">夜間模式</string>
 
     <string-array name="pref_homepage_choices">
