update miui of [ics]
Change-Id: I628d80413785e4f057e9657d95a8657ffd476591

--- a/src/packages/apps/ThemeManager/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/ThemeManager/res/values-zh-rCN/strings.xml
@@ -121,6 +121,7 @@
     <string name="theme_another_import_running">有其他的导入任务，请稍后重试</string>
     <string name="theme_is_imported">此主题已导入</string>
     <string name="theme_import_new_download">正在导入刚下载的主题</string>
+    <string name="theme_import_fail">导入主题%1$s失败</string>
 
     <!-- comments -->
     <string name="resource_comment_no_comment">无评论信息</string>
