--- a/src/packages/apps/ThemeManager/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/ThemeManager/res/values-zh-rTW/strings.xml
@@ -120,6 +120,7 @@
     <string name="theme_another_import_running">有其他的導入任務，請稍後重試</string>
     <string name="theme_is_imported">此主題已導入</string>
     <string name="theme_import_new_download">正在導入剛下載的主題</string>
+    <string name="theme_import_fail">導入主題%1$s失敗</string>
 
      <!-- comments -->
     <string name="resource_comment_no_comment">無評論資訊</string>
