--- a/src/packages/apps/ThemeManager/res/values/strings.xml
+++ b/src/packages/apps/ThemeManager/res/values/strings.xml
@@ -121,6 +121,7 @@
     <string name="theme_another_import_running">There is another import process running, please try later.</string>
     <string name="theme_is_imported">This theme is imported</string>
     <string name="theme_import_new_download">Importing</string>
+    <string name="theme_import_fail">import theme %1$s fail.</string>
 
     <!-- comments -->
     <string name="resource_comment_no_comment">No comment</string>
