update miui of [ics]
Change-Id: I30b7205c72c92245e161f8a87192a325b211476f

--- a/src/frameworks/miui/core/res/res/values-zh-rTW/strings.xml
+++ b/src/frameworks/miui/core/res/res/values-zh-rTW/strings.xml
@@ -548,7 +548,7 @@
     <string name="status_bar_toggle_torch">手電筒</string>
     <string name="status_bar_toggle_vibrate">震動</string>
     <string name="status_bar_toggle_wifi">WLAN</string>
-    <string name="status_bar_toggle_drive_mode">開車糢式</string>
+    <string name="status_bar_toggle_drive_mode">行車模式</string>
     <!-- toggle current status name -->
     <string name="status_bar_toggle_ringtone">鈴聲</string>
     <string name="status_bar_toggle_ring">響鈴</string>
