--- a/src/packages/apps/MiuiVideo/res/values/strings.xml
+++ b/src/packages/apps/MiuiVideo/res/values/strings.xml
@@ -95,4 +95,6 @@
     <string name="yestorday">昨天</string>
     <string name="playvideo">播放视频</string>
     
+    <string name="fullscreen_hint">点右上角按钮进入全屏播放模式</string>
+    
 </resources>
