--- a/src/packages/apps/SoundRecorder/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/SoundRecorder/res/values-zh-rCN/strings.xml
@@ -68,4 +68,6 @@
     <string name="unknown_caller">未知号码</string>
 
     <string name="record_saving">正在保存录音，请稍后。</string>
+    <string name="preparing_playback">正在加载录音文件，请稍候。</string>
+    <string name="loading_duration">正在获取录音时长</string>
 </resources>
