--- a/src/packages/apps/SoundRecorder/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/SoundRecorder/res/values-zh-rTW/strings.xml
@@ -68,4 +68,6 @@
     <string name="unknown_caller">未知號碼</string>
 
     <string name="record_saving">正在保存錄音，請稍後。</string>
+    <string name="preparing_playback">正在加載錄音文件，請稍候。</string>
+    <string name="loading_duration">正在獲取錄音時長</string>
 </resources>
