--- a/src/packages/apps/SoundRecorder/res/values/strings.xml
+++ b/src/packages/apps/SoundRecorder/res/values/strings.xml
@@ -104,5 +104,7 @@
     </string-array>
     <!-- add for libra end -->
 
-    <string name="record_saving">Saving record, please wait.</string>
+    <string name="record_saving">Saving the record, please wait.</string>
+    <string name="preparing_playback">Loading the record, please wait.</string>
+    <string name="loading_duration">Loading the duration...</string>
 </resources>
