--- a/src/packages/apps/Updater/res/values/strings.xml
+++ b/src/packages/apps/Updater/res/values/strings.xml
@@ -4,8 +4,8 @@
   <string name="app_name">Updater</string>
   <string name="apply_now_button_text">Update now</string>
   <string name="view_details">View details</string>
-  <string name="download_whole_rom">Download full ROM <xliff:g id="SIZE">(%s)</xliff:g></string>
-  <string name="download_ota_rom">Download the OTA update <xliff:g id="SIZE">(%s)</xliff:g></string>
+  <string name="download_whole_rom">Download <xliff:g id="SIZE">(%s)</xliff:g></string>
+  <string name="download_ota_rom">Download <xliff:g id="SIZE">(%s)</xliff:g></string>
   <string name="apply_later_button_text">Apply later</string>
   <string name="start_update">Begin update</string>
   <string name="applying_update">Updating...<xliff:g id="PROGRESS">%s</xliff:g></string>
