--- a/src/packages/apps/XiaomiServiceFramework/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/XiaomiServiceFramework/res/values-zh-rTW/strings.xml
@@ -155,7 +155,7 @@
     <string name="password_error">請輸入您的登錄密碼</string>
     <string name="progress_creating">正在獲取訂單信息…</string>
     <string name="progress_loading">正在處理，請稍候…</string>
-    <string name="progress_connecting">鏈接中…</string>
+    <string name="progress_connecting">連接中…</string>
     <string name="button_cancel">取消</string>
     <string name="button_retry">重試</string>
     <string name="button_pay">確認支付</string>
