--- a/src/packages/apps/ThemeManager/res/values/strings.xml
+++ b/src/packages/apps/ThemeManager/res/values/strings.xml
@@ -122,7 +122,7 @@
     <string name="theme_is_imported">This theme is imported</string>
     <string name="theme_import_new_download">Importing</string>
     <string name="theme_import_fail">import theme %1$s fail.</string>
-    <string name="theme_import_data">Importing preset themes</string>
+    <string name="theme_import_data">Importing preset themes, please wait..</string>
 
     <!-- comments -->
     <string name="resource_comment_no_comment">No comment</string>
