update miui of [jellybean]
Change-Id: Ic704994f8473c6fdf5fc98ad8d80340606c9c344

--- a/src/packages/apps/MiuiSettings/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/MiuiSettings/res/values-zh-rTW/strings.xml
@@ -35,7 +35,7 @@
     <!--  Access Control -->
     <string name="privacy_protect_title">隱私保護</string>
     <string name="privacy_mode_enable_title">訪客模式</string>
-    <string name="privacy_mode_enable_sum">隱藏通話短信等個人資訊以保護隱私</string>
+    <string name="privacy_mode_enable_sum">隱藏通話簡訊等個人資訊以保護隱私</string>
     <string name="ac_enable_title">瀏覽限制</string>
     <string name="ac_set_apps_title">設定限制瀏覽的應用</string>
     <string name="ac_privacy_mode_title">啟用密碼</string>
