update miui of [jellybean]
Change-Id: Ic09e14a282c27b4387ec4d5995c5f0f972ce1dff

--- a/src/packages/apps/Compass/res/values-zh-rTW/strings.xml
+++ b/src/packages/apps/Compass/res/values-zh-rTW/strings.xml
@@ -9,7 +9,15 @@
     <string name="location_south">南 %sS</string>
     <string name="location_east">東 %s</string>
     <string name="location_west">西 %s</string>
+    <string name="menu_calibrate_altitude">聯網校准海拔</string>
     <string name="calibrate_success">校正成功</string>
+    <string name="calibrate_failed_no_location">校准失敗:無法獲取當前經緯度</string>
+    <string name="calibrate_failed_timeout">校准失敗:服務器連接超時</string>
     <string name="pressure">氣壓 %.1f百帕</string>
     <string name="altitude">海拔 %.1f公尺</string>
+
+    <string name="dialog_title_no_network">請打開Wifi或移動數據流量</string>
+    <string name="dialog_calibrat_altitude">正在通過網絡校准海拔</string>
+    <string name="latitude">緯度</string>
+    <string name="longitude">經度</string>
 </resources>
