--- a/src/packages/apps/Compass/res/values/strings.xml
+++ b/src/packages/apps/Compass/res/values/strings.xml
@@ -9,7 +9,15 @@
     <string name="location_south">%s S</string>
     <string name="location_east">%s E</string>
     <string name="location_west">%s W</string>
+    <string name="menu_calibrate_altitude">Calibrate altitude with internet</string>
     <string name="calibrate_success">Calibration complete</string>
+    <string name="calibrate_failed_no_location">Calibration failed: Unable to get the current latitude and longitude</string>
+    <string name="calibrate_failed_timeout">Calibration failed: server connection timeout</string>
     <string name="pressure">Pressure %.1fhPa</string>
     <string name="altitude">Altitude %.1fm</string>
+
+    <string name="dialog_title_no_network">Please open Wifi or data traffic.</string>
+    <string name="dialog_calibrat_altitude">Calibrating the altitude through the internet.</string>
+    <string name="latitude">LAT</string>
+    <string name="longitude">LON</string>
 </resources>
