--- a/src/packages/apps/Compass/res/values-zh-rCN/strings.xml
+++ b/src/packages/apps/Compass/res/values-zh-rCN/strings.xml
@@ -9,7 +9,15 @@
     <string name="location_south">南纬 %sS</string>
     <string name="location_east">东经 %s</string>
     <string name="location_west">西经 %s</string>
+    <string name="menu_calibrate_altitude">联网校准海拔</string>
     <string name="calibrate_success">校准成功</string>
+    <string name="calibrate_failed_no_location">校准失败:无法获取当前经纬度</string>
+    <string name="calibrate_failed_timeout">校准失败:服务器连接超时</string>
     <string name="pressure">气压 %.1f百帕</string>
     <string name="altitude">海拔 %.1f米</string>
+
+    <string name="dialog_title_no_network">请打开Wifi或移动数据流量</string>
+    <string name="dialog_calibrat_altitude">正在通过网络校准海拔</string>
+    <string name="latitude">纬度</string>
+    <string name="longitude">经度</string>
 </resources>
